[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Weapons/Gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Weapons/Unarmed.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 1.25

[sub_resource type="CapsuleMesh" id=2]
radius = 0.75
mid_height = 1.25

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.817567, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true
fov = 90.0
far = 250.0

[node name="RayClimb" type="RayCast" parent="Head"]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1.35, -0.982 )

[node name="RayTop" type="RayCast" parent="Head"]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0 )
cast_to = Vector3( 0, 1, 0 )

[node name="RayEmpty" type="RayCast" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, 0 )
cast_to = Vector3( 0, 0, -1 )

[node name="Weapons" type="Spatial" parent="Head"]

[node name="Gun" parent="Head/Weapons" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.492, -0.319, -0.518 )

[node name="Unarmed" parent="Head/Weapons" instance=ExtResource( 4 )]
visible = false

[node name="WallJump" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CanJump" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CanWallRun" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[connection signal="timeout" from="WallJump" to="." method="_on_WallJump_timeout"]
[connection signal="timeout" from="CanJump" to="." method="_on_CanJump_timeout"]
[connection signal="timeout" from="CanWallRun" to="." method="_on_CanWallRun_timeout"]
