[gd_scene load_steps=23 format=2]

[ext_resource path="res://Players and Enemies/Player/ViewportSettings.gd" type="Script" id=1]
[ext_resource path="res://Players and Enemies/Player/WeaponCamera.gd" type="Script" id=2]
[ext_resource path="res://Weapons/New/WeaponsManager.gd" type="Script" id=3]
[ext_resource path="res://Players and Enemies/Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Assets/ShaderPrecompiler/ShaderPrecompiler.tscn" type="PackedScene" id=6]
[ext_resource path="res://Players and Enemies/Player/HUD/HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Weapons/New/Unarmed/Unarmed.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 1.25

[sub_resource type="CapsuleMesh" id=2]
radius = 0.75
mid_height = 1.25

[sub_resource type="Animation" id=3]
resource_name = "HeadBop"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head/WallRun/HeadBop:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.08, 0 ), Vector3( 0, 0.1, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Hit1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 1.5 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Hit2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -1.5 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head/WallRun/HeadBop:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.1, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Hit2"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Hit1"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "HeadBop"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "RESET"

[sub_resource type="AnimationNodeBlendSpace1D" id=7]
blend_point_0/node = SubResource( 5 )
blend_point_0/pos = 1.0
blend_point_1/node = SubResource( 6 )
blend_point_1/pos = 0.0

[sub_resource type="AnimationNodeOneShot" id=13]
filters = [ "Head:rotation_degrees" ]

[sub_resource type="AnimationNodeTransition" id=16]
input_count = 2
input_0/name = "state 0"
input_0/auto_advance = true
input_1/name = "state 1"
input_1/auto_advance = true

[sub_resource type="AnimationNodeTimeScale" id=9]

[sub_resource type="AnimationNodeBlendTree" id=8]
graph_offset = Vector2( -470, 46 )
nodes/Animation/node = SubResource( 15 )
nodes/Animation/position = Vector2( -360, 220 )
"nodes/Animation 2/node" = SubResource( 14 )
"nodes/Animation 2/position" = Vector2( -340, 340 )
nodes/HeadBop/node = SubResource( 7 )
nodes/HeadBop/position = Vector2( -280, 80 )
nodes/Hit/node = SubResource( 13 )
nodes/Hit/position = Vector2( 140, 60 )
nodes/HitTransition/node = SubResource( 16 )
nodes/HitTransition/position = Vector2( -120, 240 )
nodes/TimeScale/node = SubResource( 9 )
nodes/TimeScale/position = Vector2( -60, 60 )
nodes/output/position = Vector2( 340, 60 )
node_connections = [ "output", 0, "Hit", "TimeScale", 0, "HeadBop", "HitTransition", 0, "Animation", "HitTransition", 1, "Animation 2", "Hit", 0, "TimeScale", "Hit", 1, "HitTransition" ]

[node name="Player" type="KinematicBody" groups=["Player"]]
collision_mask = 10
script = ExtResource( 4 )
head_path = NodePath("Head")
wall_run_path = NodePath("Head/WallRun")
camera_path = NodePath("Head/WallRun/HeadBop/Camera")
weapon_manager_path = NodePath("Head/WallRun/Weapons")
ray_climb_path = NodePath("ClimbRays/RayClimb")
ray_top_path = NodePath("ClimbRays/RayTop")
ray_top_point_path = NodePath("ClimbRays/RayTopPoint")
ray_empty_path = NodePath("ClimbRays/RayEmpty")
ray_forward_path = NodePath("OffsetForNPC/Forward")
animation_tree_path = NodePath("AnimationTree")
hud_path = NodePath("HUD")

[node name="OffsetForNPC" type="Spatial" parent="."]

[node name="Forward" type="RayCast" parent="OffsetForNPC"]
cast_to = Vector3( 0, 0, -15 )
collision_mask = 2

[node name="ClimbRays" type="Spatial" parent="."]

[node name="RayClimb" type="RayCast" parent="ClimbRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.04739, -0.982 )
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 2

[node name="RayTop" type="RayCast" parent="ClimbRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.39606, 0 )
cast_to = Vector3( 0, 10, 0 )
collision_mask = 2

[node name="RayEmpty" type="RayCast" parent="ClimbRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.01297, 0.489888 )
cast_to = Vector3( 0, 0, -1.85 )
collision_mask = 2

[node name="RayTopPoint" type="RayCast" parent="ClimbRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.449, -0.982 )
cast_to = Vector3( 0, 2, 0 )
collision_mask = 2

[node name="WeaponNoClipping" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="WeaponNoClipping"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
shadow_atlas_size = 1
script = ExtResource( 1 )

[node name="WeaponCamera" type="Camera" parent="WeaponNoClipping/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.818, 0 )
cull_mask = 2
fov = 90.0
near = 0.01
far = 7.0
script = ExtResource( 2 )
main_cam_path = NodePath("../../../Head/WallRun/HeadBop/Camera")

[node name="ShaderPrecompiler" parent="WeaponNoClipping/Viewport/WeaponCamera" instance=ExtResource( 6 )]

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.818, 0 )

[node name="WallRun" type="Spatial" parent="Head"]

[node name="HeadBop" type="Spatial" parent="Head/WallRun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )

[node name="Camera" type="Camera" parent="Head/WallRun/HeadBop"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
cull_mask = 1048573
current = true
fov = 90.0
far = 250.0

[node name="RayCast" type="RayCast" parent="Head/WallRun/HeadBop/Camera"]
cast_to = Vector3( 0, 0, -200 )
collision_mask = 10
collide_with_areas = true

[node name="ShaderPrecompiler" parent="Head/WallRun/HeadBop/Camera" instance=ExtResource( 6 )]

[node name="Weapons" type="Spatial" parent="Head/WallRun"]
script = ExtResource( 3 )
ray_path = NodePath("../HeadBop/Camera/RayCast")
camera_path = NodePath("../../../WeaponNoClipping/Viewport/WeaponCamera")

[node name="Unarmed" parent="Head/WallRun/Weapons" instance=ExtResource( 9 )]
visible = false

[node name="HUD" parent="." instance=ExtResource( 8 )]
pause_mode = 2

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HeadBop = SubResource( 3 )
anims/Hit1 = SubResource( 10 )
anims/Hit2 = SubResource( 11 )
anims/RESET = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/HeadBop/blend_position = 0.0
parameters/Hit/active = false
parameters/HitTransition/current = 0
parameters/TimeScale/scale = 1.5
